# uv-workspace-example

./: LICENSE  README.md  compose.devcontainer.yml  pyproject.toml
.devcontainer/: devcontainer.json  dockerfile
applications/todo_server/: pyproject.toml
applications/todo_server/src/: main.py
applications/todo_server/src/libs/: __init__.py
applications/todo_server/src/libs/common/domain/entity/: entity1.py
applications/todo_server/src/libs/common/domain/repository/: repository1.py
applications/todo_server/src/libs/common/infrastructure/container/: common_container.py
applications/todo_server/src/libs/common/infrastructure/repository/: repository1.py
applications/todo_server/src/libs/common/tests/: test_entity1.py  test_path_utils.py  test_repository1.py
applications/todo_server/src/libs/common/utils/: path_utils.py  str_utils.py
