[project]
name = "todo-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "defines",
    "dependency-injector>=4.46.0",
    "fastapi[all]>=0.115.8",
    "injector>=0.22.0",
    "logger",
    "pytest>=8.3.4",
]

[tool.uv.sources]
logger = { workspace = true }
defines = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
